--- a/src/app/core/authentication/sign-up/sign-up.component.html
+++ b/src/app/core/authentication/sign-up/sign-up.component.html
@@ -39,3 +39,10 @@
     </button>
   </form>
 </section>
+
+<div>
+  <ul>
+    <li><a href="#">Link1</a></li>
+    <li><a href="#">link2</a></li>
+  </ul>
+</div>
