--- a/src/app/core/authentication/login/login.component.html
+++ b/src/app/core/authentication/login/login.component.html
@@ -1,1 +1,40 @@
-<p>login works!</p>
+<section class="login-form">
+  <form 
+    class="login-container" 
+    [formGroup]="loginform" 
+    (ngSubmit)="onLogin()"
+  >
+    <mat-form-field appearance="outline">
+      <input 
+        type="email" 
+        matInput placeholder="Your email" 
+        formControlName="email"
+      >
+      <mat-error *ngIf="emailControl.errors?.['required']">
+        Email field must not be empty
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field 
+      hintLabel="Should be at least 8 characters long." 
+      appearance="outline"
+    >
+      <input 
+        type="password" 
+        matInput placeholder="Your password" 
+        formControlName="password" 
+      >
+      <mat-error *ngIf="passwordControl.errors?.['required']">
+        Password is required
+      </mat-error>
+    </mat-form-field>
+    <button 
+      type="submit" 
+      mat-raised-button 
+      color="primary" 
+      [disabled]="loginform.invalid"
+    >
+      Submit
+    </button>
+  </form>
+</section>
+
