--- a/src/app/core/authentication/sign-up/sign-up.component.html
+++ b/src/app/core/authentication/sign-up/sign-up.component.html
@@ -1,15 +1,24 @@
 <section class="signup-form">
-  <form class="signup-container" [formGroup]="Signupform" (ngSubmit)="onSignup()">
-    <mat-form-field>
+  <form 
+    class="signup-container" 
+    [formGroup]="signupform" 
+    (ngSubmit)="onSignup()"
+  >
+    <mat-form-field appearance="outline">
       <input 
         type="email" 
         matInput 
         placeholder="Your email" 
         formControlName="email"
       >
-      <mat-error *ngIf="emailControl.errors?.['required']">Email field must not be empty</mat-error>
+      <mat-error *ngIf="emailControl.errors?.['required']">
+        Email field must not be empty
+      </mat-error>
     </mat-form-field>
-    <mat-form-field hintLabel="Should be at least 8 characters long.">
+    <mat-form-field 
+      hintLabel="Should be at least 8 characters long."
+      appearance="outline"
+    >
       <input 
         type="password" 
         matInput 
@@ -21,9 +30,11 @@
       <mat-hint [align]="hintEnd">
         {{ passwordControl.value?.length }} / 8
       </mat-hint>
-      <mat-error >Password must not be less than 8 characters.</mat-error>
+      <mat-error >
+        Password must not be less than 8 characters.
+      </mat-error>
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field appearance="outline">
       <input 
         matInput 
         placeholder="Your Birthdate" 
@@ -34,15 +45,17 @@
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker ></mat-datepicker>
     </mat-form-field>
-    <button type="submit" mat-raised-button color="primary">
+    <mat-checkbox formControlName="terms" color="primary">
+      Agree to Terms and Condition.
+    </mat-checkbox>
+    <button 
+      type="submit"  
+      mat-raised-button 
+      color="primary"
+      [disabled]="signupform.invalid"
+    >
       Submit
     </button>
   </form>
 </section>
 
-<div>
-  <ul>
-    <li><a href="#">Link1</a></li>
-    <li><a href="#">link2</a></li>
-  </ul>
-</div>
