--- a/src/app/core/authentication/sign-up/sign-up.component.scss
+++ b/src/app/core/authentication/sign-up/sign-up.component.scss
@@ -3,8 +3,9 @@ $signupitemwidth: 300px;
 .signup-container {
   display: flex;
   flex-direction: column;
-  // justify-content: center;
+  justify-content: center;
   align-items: center;
+  gap: 7px;
 }
 
 mat-form-field {
