--- a/src/app/core/authentication/login/login.component.html
+++ b/src/app/core/authentication/login/login.component.html
@@ -7,7 +7,8 @@
     <mat-form-field appearance="outline">
       <input 
         type="email" 
-        matInput placeholder="Your email" 
+        matInput 
+        placeholder="Your email" 
         formControlName="email"
       >
       <mat-error *ngIf="emailControl.errors?.['required']">
