--- a/src/app/core/navigation/header/header.component.html
+++ b/src/app/core/navigation/header/header.component.html
@@ -5,21 +5,21 @@
     </button>
   </div>
   <div>
-    <a mat-button [routerLink]="['']">LOGO</a>
+    <a mat-button [routerLink]="['']">NG Fitness</a>
   </div>
   <span class="toolbar-spacer"></span>
   <div class="h-xs">
     <ul class="navigation-item">
-      <li *ngIf="!isAuth">
+      <li *ngIf="!(isAuth$ | async)">
         <a mat-button [routerLink]="['signup']">Signup</a>
       </li>
-      <li *ngIf="!isAuth">
+      <li *ngIf="!(isAuth$ | async)">
         <a mat-button [routerLink]="['login']">Login</a>
       </li>
-      <li *ngIf="isAuth">
+      <li *ngIf="isAuth$ | async">
         <a mat-button [routerLink]="['training']">Training</a>
       </li>
-      <li *ngIf="isAuth">
+      <li *ngIf="isAuth$ | async">
         <a mat-button (click)="onLogout()">Logout</a>
       </li>
     </ul>
