--- a/src/app/core/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/core/navigation/sidenav-list/sidenav-list.component.html
@@ -1,17 +1,17 @@
 <mat-nav-list>
-  <a *ngIf="!isAuth" mat-list-item [routerLink]="['signup']" (click)="onClose()">
+  <a *ngIf="!(isAuth$ | async)" mat-list-item [routerLink]="['signup']" (click)="onClose()">
     <mat-icon>face</mat-icon>
     <span class="nav-caption">Signup</span>
   </a>
-  <a *ngIf="!isAuth" mat-list-item [routerLink]="['login']" (click)="onClose()">
+  <a *ngIf="!(isAuth$ | async)" mat-list-item [routerLink]="['login']" (click)="onClose()">
     <mat-icon>input</mat-icon>
     <span class="nav-caption">Login</span>
   </a>
-  <a *ngIf="isAuth" mat-list-item [routerLink]="['training']" (click)="onClose()">
+  <a *ngIf="isAuth$ | async" mat-list-item [routerLink]="['training']" (click)="onClose()">
     <mat-icon>fitness_center</mat-icon>
     <span class="nav-caption">Training</span>
   </a>
-  <mat-list-item *ngIf="isAuth" (click)="onClose()">
+  <mat-list-item *ngIf="isAuth$ | async" (click)="onClose()">
     <button mat-button (click)="onLogout()">
       <mat-icon matListItemIcon>logout</mat-icon>
       <span class="nav-caption">logout</span>
