--- a/src/app/training/components/past-training/past-training.component.html
+++ b/src/app/training/components/past-training/past-training.component.html
@@ -29,7 +29,7 @@
       <!-- Calories Column -->
       <ng-container matColumnDef="calories">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Calories </th>
-        <td mat-cell *matCellDef="let element"> {{ element.calories | number }} </td>
+        <td mat-cell *matCellDef="let element"> {{ element.calory | number }} </td>
       </ng-container>
     
       <!-- State Column -->
