--- a/src/app/training/components/new-training/new-training.component.html
+++ b/src/app/training/components/new-training/new-training.component.html
@@ -7,7 +7,7 @@
       <mat-card-content>
         <mat-form-field *ngIf="(exercises$ | async) || !(isloading$ | async)" >
           <mat-select placeholder="Choose Exercise" formControlName="exercise">
-            <mat-option *ngFor="let exercise of exercises$ | async" [value]="exercise.id">
+            <mat-option *ngFor="let exercise of exercises$ | async" [value]="exercise?.id">
               {{ exercise.name }}
             </mat-option>
           </mat-select>
