--- a/src/app/training/components/stop-training/stop-training.component.html
+++ b/src/app/training/components/stop-training/stop-training.component.html
@@ -5,7 +5,7 @@
   </mat-dialog-content>
   <mat-dialog-actions>
     <button mat-raised-button color="primary" [mat-dialog-close]="true">Yes</button>
-    <button mat-raised-button color="warn" [mat-dialog-close]="false">No</button>
+    <button class="warn" mat-raised-button [mat-dialog-close]="false">No</button>
   </mat-dialog-actions>
 </div>
 
