--- a/src/app/core/authentication/sign-up/sign-up.component.html
+++ b/src/app/core/authentication/sign-up/sign-up.component.html
@@ -1,65 +1,65 @@
-<section class="signup-form">
+
+<section class="signup-container">
   <form 
-    class="signup-container" 
+    class="signup-form" 
     [formGroup]="signupform" 
-    (ngSubmit)="onSignup()"
-  >
-    <mat-form-field appearance="outline">
-      <input 
-        type="email" 
-        matInput 
-        placeholder="Your email" 
-        formControlName="email"
-      >
-      <mat-error *ngIf="emailControl.errors?.['required']">
-        Email field must not be empty
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field 
-      hintLabel="Should be at least 8 characters long."
-      appearance="outline"
-    >
-      <input 
-        type="password" 
-        matInput 
-        placeholder="Your password" 
-        formControlName="password"
-        minlength="8"
-        name="password"
-      >
-      <mat-hint [align]="hintEnd">
-        {{ passwordControl.value?.length }} / 8
-      </mat-hint>
-      <mat-error >
-        Password must not be less than 8 characters.
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-      <input 
-        matInput 
-        placeholder="Your Birthdate" 
-        formControlName="birthdate"
-        [matDatepicker]="picker"
-        [max]="maxDate"
-      >
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker ></mat-datepicker>
-    </mat-form-field>
-    <mat-checkbox formControlName="terms" color="primary">
-      Agree to Terms and Condition.
-    </mat-checkbox>
-    <button 
-      type="submit"  
-      mat-raised-button 
-      color="primary"
-      [disabled]="signupform.invalid || (isloading$ | async)"
-    >
-      {{ (isloading$ | async) ? '' : 'Sign up' }}
-      <mat-progress-spinner 
-        *ngIf="isloading$ | async" 
-        mode="indeterminate">
-      </mat-progress-spinner>
-    </button>
+    (ngSubmit)="onSignup()">
+    <mat-card>
+      <mat-card-content>
+        <mat-form-field appearance="outline">
+        <input 
+          type="email" 
+          matInput placeholder="Your email" 
+          formControlName="email">
+        <mat-error *ngIf="emailControl.errors?.['required']">
+          Email field must not be empty
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field 
+        hintLabel="Should be at least 8 characters long." 
+        appearance="outline">
+        <input 
+          [type]="showPassword ? 'text' : 'password'" 
+          matInput placeholder="Your password" 
+          formControlName="password"
+          minlength="8" name="password">
+        <mat-hint [align]="hintEnd">
+          {{ passwordControl.value?.length }} / 8
+        </mat-hint>
+        <mat-icon matSuffix (click)="togglePasswordVisibility()">
+          {{ showPassword? 'visibility_off' : 'visibility' }}
+        </mat-icon>
+        <mat-error>
+          Password must not be less than 8 characters.
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <input 
+          matInput 
+          placeholder="Your Birthdate" 
+          formControlName="birthdate" 
+          [matDatepicker]="picker" [max]="maxDate">
+        <mat-datepicker-toggle matSuffix [for]="picker">
+        </mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+      <mat-checkbox formControlName="terms" color="primary">
+        Agree to Terms and Condition.
+      </mat-checkbox>
+      </mat-card-content>
+      <mat-card-actions>
+        <button 
+          type="submit" 
+          mat-raised-button color="primary" 
+          [disabled]="signupform.invalid || (isloading$ | async)">
+            {{ (isloading$ | async) ? '' : 'Sign up' }}
+          <mat-progress-spinner *ngIf="isloading$ | async" mode="indeterminate">
+          </mat-progress-spinner>
+        </button>
+      </mat-card-actions>
+    </mat-card>
   </form>
 </section>
+
+
 
