--- a/src/app/shared/components/snackbar/snackbar.component.html
+++ b/src/app/shared/components/snackbar/snackbar.component.html
@@ -1,4 +1,7 @@
-<span class="example-pizza-party">
-  {{ data.message }}
-</span>
+<div class="snackbar-container">
+  <div class="example-pizza-party">
+    {{ data.message }}
+  </div>
+</div>
+
 
