--- a/src/app/training/components/training/training.component.html
+++ b/src/app/training/components/training/training.component.html
@@ -1,9 +1,17 @@
 <mat-tab-group *ngIf="!ongoingTraining" animationDuration="0ms">
-  <mat-tab label="New Excercise" >
-    <app-new-training (trainingStart)="ongoingTraining = true"></app-new-training>
+  <mat-tab label="New Excercise">
+    <ng-template matTabContent>
+      <app-new-training 
+        (trainingStart)="ongoingTraining = true">
+      </app-new-training>
+    </ng-template>
   </mat-tab>
   <mat-tab label="Past Exercise">
-    <app-past-training></app-past-training>
+    <ng-template matTabContent>
+      <app-past-training></app-past-training>
+    </ng-template>
   </mat-tab>
 </mat-tab-group>
-<app-current-training *ngIf="ongoingTraining"></app-current-training>
+<app-current-training 
+  *ngIf="ongoingTraining">
+</app-current-training>
