training components refactoring v1

--- a/src/app/training/components/new-training/new-training.component.html
+++ b/src/app/training/components/new-training/new-training.component.html
@@ -30,7 +30,7 @@
     </form>
   </section>
 
-  <ng-container *ngIf="exercises$ | async">
+  <!-- <ng-container *ngIf="exercises$ | async">
     <section>
       <div>
         {{ errorMsg }}
@@ -38,7 +38,7 @@
     </section>
   </ng-container>
 
-</ng-container>
+</ng-container> -->
 
 
 
