--- a/src/app/training/components/past-training/past-training.component.html
+++ b/src/app/training/components/past-training/past-training.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="!errorMsg; else error_template">
+<!-- <ng-container *ngIf="!errorMsg; else error_template"> -->
   <div class="main-body">
     <div class="filter">
       <mat-form-field>
@@ -47,13 +47,13 @@
       </mat-paginator>
     </div>
   </div>
-</ng-container>
+<!-- </ng-container> -->
 
-<ng-template #error_template>
+<!-- <ng-template #error_template>
   <section>
     <div>
       {{ errorMsg }}
     </div>
   </section>
-</ng-template>
+</ng-template> -->
 
